--- a/mech-linux.yml
+++ b/mech-linux.yml
@@ -1,9 +1,9 @@
-# FaSTMECH
+# An env for building FaSTMECH and its deps from source.
 name: mech
 channels:
   - default
 dependencies:
-- python==3.6
+- python=3.6
 - hdf5==1.8.14
 - gcc_linux-64
 - gxx_linux-64
