Install Cython and conda compilers
The C compiler is used by Cython. I hestitated to add the Fortran
compiler, but I was concerned I'd forget it otherwise.

--- a/bmi_wrap.yml
+++ b/bmi_wrap.yml
@@ -7,6 +7,9 @@ channels:
 dependencies:
 - python=3.6
 - numpy
+- cython
+- gcc_linux-64
+- gfortran_linux-64 # not always needed, obvs
 - model_metadata
 - pyyaml
 - jinja2
