--- a/fast-osx.yml
+++ b/fast-osx.yml
@@ -1,7 +1,7 @@
 # Build FaSTMECH from source using conda binaries for cgns and iriclib
 name: fast
 channels:
-  - default
+  - conda-forge
   - csdms-stack
 dependencies:
   - python =3
