--- a/csdms-docs.yml
+++ b/csdms-docs.yml
@@ -1,7 +1,7 @@
 # Build BMI and pymt docs with sphinx.
 name: docs
 channels:
-  - csdms-stack
+  - conda-forge
 dependencies:
   - python =3
   - sphinx >=1.5.1
