--- a/bmi_wrap.yml
+++ b/bmi_wrap.yml
@@ -16,7 +16,8 @@ dependencies:
   - jinja2
   - cookiecutter
   - six
-  - bmi_wrap=0.1.3 # supplies bmi-wrap & bmi-render
+  - bmi_wrap=0.1.3  # supplies bmi-wrap & bmi-render
   - versioneer
   - bmi-tester
   - pymt
+  - ipython
