--- a/bmi_wrap.yml
+++ b/bmi_wrap.yml
@@ -10,6 +10,8 @@ dependencies:
   - c-compiler
   - cxx-compiler
   - fortran-compiler
+  - make
+  - cmake
   - pkgconfig
   - model_metadata
   - pyyaml
