--- a/bmif.yaml
+++ b/bmif.yaml
@@ -6,6 +6,7 @@ dependencies:
   - python =3
   - make
   - cmake
+  - pkg-config
   - fortran-compiler
   # - cxx-compiler  # [win]
   # - vs2019_win-64  # [win]
